tests/files/type_checker_tests/should_pass/237.cmdr
//Test that functions type check
fn add() {
    println 3 + 4;
}
add();
x = add();
