tests/files/type_checker_tests/should_fail/216.cmdr
//Should not allow using function defined variables outside functions
fn add(x, y) {
	return x + y;
}
println x;